Add integration tests for osquery: /enroll
